<resources>
    <string name="app_name">小鹅事务所</string>
    <!--    主页BottomNavigationView    -->
    <string name="home">主页</string>
    <string name="notebook">备忘录</string>
    <string name="account">账本</string>
    <string name="schedule">行程表</string>
    <string name="memorial">纪念日</string>
    <string name="profile">我的</string>

    <!--    Account页面Header    -->
    <string name="expense">支出</string>
    <string name="current_month_expense">本月支出</string>
    <string name="income">收入</string>
    <string name="current_month_income">本月收入</string>
    <string name="balance">结余</string>
    <string name="current_month_balance">本月结余</string>
    <string name="consume">消费</string>

    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <string name="add_schedule">添加事务</string>
    <string name="modify_schedule">修改事务</string>
    <string name="input_schedule_title">请输入事务</string>
    <string name="input_schedule_content">请输入描述</string>
    <string name="date_title_tag">日期：</string>
    <string name="schedule_title_tag">事务：</string>
    <string name="schedule_content_tag">描述：</string>
    <string name="select_date">选择日期</string>

    <string name="transaction_description">描述…</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="sky">天</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="again">下一笔</string>
    <string name="finish">完成</string>
    <string name="subtract">-</string>
    <string name="plus">+</string>

    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期日</string>

    <string name="monday_z">周一</string>
    <string name="tuesday_z">周二</string>
    <string name="wednesday_z">周三</string>
    <string name="thursday_z">周四</string>
    <string name="friday_z">周五</string>
    <string name="saturday_z">周六</string>
    <string name="sunday_z">周日</string>

    <string name="confirm_delete">确认删除吗？</string>
    <string name="content">内容</string>
    <string name="title">标题</string>
    <string name="some_month_date">%s月%s日</string>
    <string name="add_transaction">记一笔</string>
    <string name="add_one">加一个</string>
    <string name="delete">删除</string>
    <string name="deleted">已删除</string>
    <string name="edit">编辑</string>
    <string name="money_cant_be_zero">金额不能为0</string>
    <string name="schedule_cant_be_blank">事务不能为空</string>
    <string name="alright">好吧</string>
    <string name="multiple_chose">多选</string>
    <string name="search">搜索</string>
    <string name="some_month">%d月</string>
    <string name="some_year">%d年</string>
    <string name="today_no_schedule">今天没有事务</string>
    <string name="today_no_transaction">今天没有记账</string>
    <string name="statistics">统计</string>
    <string name="undo">撤回</string>
    <string name="date">日期</string>
    <string name="to_top">置顶</string>
    <string name="change_time">修改时间</string>

    <string name="no_transaction">没有记账</string>

    <string name="content_future">%s还有</string>
    <string name="content_past">%s已经</string>

    <string name="original_time">起始日：%s</string>
    <string name="target_time">目标日：%s</string>

</resources>