<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.transaction.TransactionActivity">

    <FrameLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/primary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icon_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:src="@drawable/icon_back"
            tools:ignore="ContentDescription" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:background="@color/primary_color"
            app:tabIndicatorAnimationMode="elastic"
            app:tabIndicatorColor="@color/nor_text_color"
            app:tabIndicatorFullWidth="false"
            app:tabMode="auto"
            app:tabSelectedTextColor="@color/nor_text_color"
            app:tabTextColor="@color/hint_text_color" />

    </FrameLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/transaction_view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_bar"
        android:layout_width="0dp"
        android:layout_height="381dp"
        android:background="@color/primary_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:drawablePadding="10dp"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="28dp"
            android:paddingEnd="16dp"
            android:textSize="14sp"
            android:textColor="@color/nor_text_color"
            app:drawableStartCompat="@drawable/icon_date"
            app:layout_constraintEnd_toStartOf="@id/tv_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="12月11日" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:drawablePadding="10dp"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/transaction_description"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/nor_text_color"
            app:drawableStartCompat="@drawable/icon_page"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_date"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="#EAE2E1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description" />

        <GridLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:columnCount="4"
            android:rowCount="4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line">

            <!--第一行-->
            <TextView
                android:id="@+id/num_seven"
                style="@style/gridlayout_number"
                android:layout_width="0dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:text="@string/seven" />

            <TextView
                android:id="@+id/num_eight"
                style="@style/gridlayout_number"
                android:layout_width="0dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:text="@string/eight" />

            <TextView
                android:id="@+id/num_nine"
                style="@style/gridlayout_number"
                android:layout_width="0dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:text="@string/nine" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/button_backspace"
                android:layout_width="0dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                app:cardBackgroundColor="@color/primary_color"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_backspace"
                    tools:ignore="ContentDescription" />

            </com.google.android.material.card.MaterialCardView>

            <!--第二行-->
            <TextView
                android:id="@+id/num_four"
                style="@style/gridlayout_number"
                android:layout_width="0dp"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:text="@string/four" />

            <TextView
                android:id="@+id/num_five"
                style="@style/gridlayout_number"
                android:layout_width="0dp"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:text="@string/five" />

            <TextView
                android:id="@+id/num_six"
                style="@style/gridlayout_number"
                android:layout_width="0dp"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:text="@string/six" />

            <TextView
                android:id="@+id/button_plus"
                style="@style/gridlayout_number"
                android:layout_width="0dp"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:text="@string/plus" />

            <!--第三行-->
            <TextView
                android:id="@+id/num_one"
                style="@style/gridlayout_number"
                android:layout_width="0dp"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:text="@string/one" />

            <TextView
                android:id="@+id/num_two"
                style="@style/gridlayout_number"
                android:layout_width="0dp"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:text="@string/two" />

            <TextView
                android:id="@+id/num_three"
                style="@style/gridlayout_number"
                android:layout_width="0dp"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:text="@string/three" />

            <TextView
                android:id="@+id/button_sub"
                style="@style/gridlayout_number"
                android:layout_width="0dp"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:text="@string/subtract" />

            <!--第四行-->
            <TextView
                android:id="@+id/num_dot"
                style="@style/gridlayout_number"
                android:layout_width="0dp"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:text="@string/dot" />

            <TextView
                android:id="@+id/num_zero"
                style="@style/gridlayout_number"
                android:layout_width="0dp"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/button_again"
                style="@style/gridlayout_text"
                android:layout_width="0dp"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:text="@string/again" />

            <TextView
                android:id="@+id/button_done"
                style="@style/gridlayout_text"
                android:layout_width="0dp"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:text="@string/finish" />

        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>