<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/primary_color"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/add_schedule"
            android:textColor="@color/nor_text_color"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/date_title_tag"
            android:textColor="@color/nor_text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/select_date"
            android:textColor="@color/nor_text_color"
            app:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_tag" />

        <TextView
            android:id="@+id/schedule_title_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/schedule_title_tag"
            android:textColor="@color/nor_text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_date" />

        <EditText
            android:id="@+id/et_schedule_title"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/input_schedule_title"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="7"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@drawable/bg_white_radius8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/schedule_title_tag" />

        <TextView
            android:id="@+id/schedule_content_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/schedule_content_tag"
            android:textColor="@color/nor_text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_schedule_title" />

        <EditText
            android:id="@+id/et_schedule_content"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/input_schedule_content"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxLength="24"
            android:maxLines="2"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@drawable/bg_white_radius8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/schedule_content_tag" />

        <TextView
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginTop="24dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:gravity="center"
            android:background="@color/cancel_button"
            android:textColor="@color/white"
            android:foreground="@drawable/foreground_card_button"
            app:layout_constraintEnd_toStartOf="@id/confirm_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_schedule_content" />

        <TextView
            android:id="@+id/confirm_button"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginTop="24dp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:gravity="center"
            android:background="@color/confirm_button"
            android:textColor="@color/white"
            android:foreground="@drawable/foreground_card_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancel_button"
            app:layout_constraintTop_toBottomOf="@id/et_schedule_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>