<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".ui.memorial.MemorialActivity">

    <little.goose.account.ui.widget.actionbar.NormalActionBar
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/primary_color"
        app:titleText="@string/memorial" />

    <little.goose.account.ui.widget.text.MemorialTextView
        android:id="@+id/tv_memo_time"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:background="@color/primary_color"
        android:gravity="center"
        android:paddingTop="48dp"
        android:paddingBottom="48dp"
        android:textColor="@color/nor_text_color"
        android:textSize="78sp"
        tools:text="154" />

    <TextView
        android:id="@+id/tv_ori_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="18dp"
        android:background="@color/primary_color"
        android:textColor="@color/sec_text_color"
        tools:text="起始日：2020-08-08 星期六" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@color/primary_color">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_change_time"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="16dp"
            android:text="@string/change_time"
            android:textColor="@color/nor_text_color"
            app:backgroundTint="@color/white" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/primary_color"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            style="@style/normal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="18dp"
            android:text="@string/content" />

        <TextView
            android:id="@+id/tv_content"
            style="@style/normal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="18dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:maxWidth="300dp"
            tools:text="纪念日" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/primary_color">

        <TextView
            style="@style/normal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="18dp"
            android:text="@string/to_top" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sw_to_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="16dp" />

    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_confirm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/confirm"
        android:textColor="@color/white"
        app:cornerRadius="0dp"
        app:backgroundTint="@color/cancel_button" />

</LinearLayout>